<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Foodgent</string>
    <string name="app_nameP1">Food</string>
    <string name="app_nameP2">gent</string>
    <string name="topBar_name">Food</string>
    <string name="fragment1_name">Lebensmittel</string>
    <string name="fragment2_name">Rezepte</string>
    <string name="fragment3_name">Einkaufsliste</string>
    <string name="itemListCode">item.txt</string>
    <string name="cookinglistCode">cooking.txt</string>
    <string name="shoppingList">shopping.txt</string>
    <string name="settingsFile">settings.txt</string>
    <string name="by">By</string>
    <string name="heller_modus">Heller Modus</string>
    <string name="made">Made</string>
    <string name="dunkler_modus">Dunkler Modus</string>
    <string name="alles_loeschen">ALLES LÖSCHEN</string>
    <string name="alle_listen_leeren">Alle Listen leeren</string>
    <string name="feedback">Feedback</string>
    <string name="codechrisb">CodeChrisB</string>
    <string name="feedback_text">Melde bitte alle Fehler die du findest.</string>
    <string name="grosser_Text">Großer Text</string>
    <string name="placeholderText">Placeholder</string>
    <string name="storedSettingsFileName">settings.txt</string>

    <string name="setting_lightMode">lightMode</string>
    <string name="setting_darkMode">Dark Mode</string>
    <string name="setting_smallText">smallText</string>
    <string name="setting_bigText">bigText</string>


    <string name="chrisGithub">https://github.com/codechrisb</string>
    <string name="robertGithub">https://github.com/robertFreiseisen</string>
    <string name="feedback_toShort">Feedback zu kurz.</string>

    <string name="premium_info">Hole dir alle Premium Features für nur 1.99</string>
    <string name="premium_boughtInfo">Kuehli ist stolz auf dich!</string>

    <string name="app_crashed"> Es ist leider etwas unerwrtetes passiert.</string>
    <string name="crashName"> Crashreport.txt</string>
    <string name="crashNo">Ich möchte NICHT helfen Foodgent besser zu machen. \n\n
        Weswegen ich auf Vorteile wie die Teilnahme an ,\n
        •Gratis Premium Verlosungen\n
        •Merchandise Verlosungen\n\n
        oder Sonstige Events verzichte. </string>

    <string-array name="planets_array" tools:ignore="ExtraTranslation">
        <item>Hallo! Ich bin Kuehli \nIn diesem Tutorial zeig ich dir was ich so alles kann!</item>
        <item>1. Wenn du mir erzählst was sich in deinem Kühlschrank befindet, werde ich das für dich im Auge behalten  </item>
        <item>2. Zum Beispiel wenn ein Lebensmittel kurz vor dem Ablaufsdatum steht, werde ich dir das mitteilen.</item>
        <item>3. Du kannst mir auch Kochrezepte bei bringen, oder mir sagen was du beim nächsten Einkauf kaufen willst. </item>
        <item>4. Du kannst Lebensmittel auch per Bar-Code einscannen, beim ersten mal sagst du mir um was es sich handelt. </item>
        <item>5. Beim nächsten mal scannst du den Code und ich kenne das Lebensmittel wieder!</item>
        <item>6. Ich vergesse nie etwas! Absofort bin ich dein persönlicher Assistent </item>
        <item>Mit freundlichen grüßen Kuehli, dein bester Assistent! </item>
    </string-array>


    <string-array name="deleteText" tools:ignore="ExtraTranslation">
        <item>Willst du wirklich all deine Daten Löschen?</item>
        <item>All deine Lebensmittel gehen verloren!</item>
        <item>All deine Rezepte werden verschwinden!</item>
        <item>Deine Einkaufsliste geht verloren! </item>
        <item>BIST DU DIR SICHER?</item>
    </string-array>

    <string-array name="versionInfo" tools:ignore="ExtraTranslation">
        <item>Foodgent ©</item>
        <item>v0.1.2</item>
        <item>Last Update : 05/03/2020</item>
    </string-array>

    <string-array name="foodTypes" tools:ignore="ExtraTranslation">
        <item>Fleisch</item>
        <item>Nachspeise</item>
        <item>Vegan</item>
        <item>Vegeatrisch</item>

    </string-array>

    <string-array name="saveListNames" tools:ignore="ExtraTranslation">
        <item>item</item>
        <item>cooking</item>
        <item>shopping</item>
        <item>barcode</item>
        <item>setting</item>
    </string-array>

    <string-array name="weekDays">
        <item>Samstag</item>
        <item>Sonntag</item>
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
    </string-array>


    <string name="featureNr1">• Unbegrenzte Listen   </string>>
    <string name="featureNr2">• Premium Kochrezepte  </string>
    <string name="featureNr3">• Personalisierungen   </string>
    <string name="featureNr4">• Barcodes Scannen     </string>
    <string name="featureNr5">• Barcodes verwalten   </string>
    <string name="featureNr6">• Premium Einstellungen</string>


    <string-array name="premiumFeatureList">
        <item></item>
        <item>• Mehr als 100 Premium Kochrezepte</item>
        <item>• Barcode Scannen</item>
        <item>• Barcodes verwalten</item>
        <item>• Weiter Personalisierungsmöglichkeiten</item>
    </string-array>


    <string-array name="units" tools:ignore="ExtraTranslation">
        <item>Kilo</item>
        <item>Gramm</item>
        <item>Liter</item>
        <item>Milliliter</item>
        <item>Stück</item>
        <item>Packung</item>
    </string-array>


    <string name="premiumCode">foodgent_premium</string>
    <string name="jsonFile">recipes.json</string>

</resources>
