<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/setting_bigBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toTopOf="@+id/guideline143"
        app:layout_constraintEnd_toStartOf="@+id/guideline142"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline141"
        app:layout_constraintTop_toTopOf="@+id/guideline139"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setting_roundtopBarPart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/themeColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:collapseIcon="@android:drawable/ic_menu_call"
        app:layout_constraintBottom_toTopOf="@+id/guideline134"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline134"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline96"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline98"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />

    <TextView
        android:id="@+id/setting_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoText="false"
        android:ellipsize="marquee"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="FoodGent Premium"
        android:textColor="@color/premiumActiveBg"
        android:textSize="18sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline90"
        app:layout_constraintEnd_toStartOf="@+id/guideline88"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline141"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline102"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline142"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.026751593" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline139"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline143"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <View
        android:id="@+id/setting_roundtopBarPart2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/half_round"
        app:layout_constraintBottom_toTopOf="@+id/guideline90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_roundtopBarPart" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Premium Vorteile"
        app:layout_constraintEnd_toStartOf="@+id/guideline88"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline76" />

    <TextView
        android:id="@+id/textView_feature1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/featureNr1"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline96"
        app:layout_constraintEnd_toStartOf="@+id/guideline88"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline93"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView_feature2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/featureNr2"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline97"
        app:layout_constraintEnd_toStartOf="@+id/guideline88"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline96" />

    <TextView
        android:id="@+id/textView_feature3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/featureNr3"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline98"
        app:layout_constraintEnd_toStartOf="@+id/guideline88"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline97" />

    <TextView
        android:id="@+id/textView_feature4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/featureNr4"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline99"
        app:layout_constraintEnd_toStartOf="@+id/guideline88"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline98" />

    <TextView
        android:id="@+id/textView_feature5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/featureNr5"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline100"
        app:layout_constraintEnd_toStartOf="@+id/guideline88"
        app:layout_constraintStart_toStartOf="@+id/guideline102"
        app:layout_constraintTop_toTopOf="@+id/guideline99" />

</androidx.constraintlayout.widget.ConstraintLayout>